--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Every Child International</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/3789bbfefa.js" crossorigin="anonymous"></script>
