--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container-fluid">
                
                  <nav class="navbar navbar-expand-lg navbar-dark "> 
-                  <a class="navbar-brand" href="#"><img width="75px" class="" src="images/logo.png" alt="Every Child International logo"></a>
+                  <a class="navbar-brand" href="#"><img width="75px" class="" src="public/images/logo.png" alt="Every Child International logo"></a>
              
               <button class="navbar-toggler "  type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon "></span>
