--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Navigation Bar -->
 
   
-    <Section class="navigation-bar">
+    <Section class="navigation-bar" background-image="public/images/25.jpg">
        
             <div class="container-fluid">
                
